fixed graphic overlap

--- a/css/presence.css
+++ b/css/presence.css
@@ -664,7 +664,7 @@ ol li::before {
 .c7 {
   border-radius: 0px;
   top: 400px;
-  right: 900px;
+  right: 950px;
 }
 
 #about_content {
